--- a/src/components/todo-item-panel/TodoItemPanel.css
+++ b/src/components/todo-item-panel/TodoItemPanel.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 570px;
   height: 60px;
-  box-shadow: -1px 1px 3px silver;
+  box-shadow: -1px 1px 3px Teal;
 }
 
 .item-mark-container-todo {
